--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="shortcut icon" href="../images/Delaninew.ico" />
+    <link rel="shortcut icon" href="../assets/Delaninew.ico" />
     <title>Delani Studio by Diana</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/delani.css" />
+    <link rel="stylesheet" href="/css/delani.css" />
   </head>
   <body>
     <div class="landing">
-      <img src="images/logo/logo.png" alt="logo" id="logo" />
+      <img src="assets/logo/logo.png" alt="logo" id="logo" />
       <h1>WELCOME</h1>
-      <h1>TO DELANI STUDIO</h1>
-      <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
+      <h1>TO DELANI STUDIO By DIANA</h1>
+      <p>AT DELANI STUDIO, WE ARE AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
       <div class="mouse-click"></div>
       <a href="#about-us"
-        ><img src="images/mouse_click.png" alt=" mouse_click" id="mouse-click"
+        ><img src="assets/mouse_click.png" alt=" mouse_click" id="mouse-click"
       /></a>
     </div>
     <div class="container about" id="about-us">
@@ -73,7 +73,7 @@
             </p>
           </div>
           <div id="design-image">
-            <img src="images/services_icons/design_icon.png" alt="design" />
+            <img src="assets/services_icons/design_icon.png" alt="design" />
             <p>DESIGN</p>
           </div>
         </div>
@@ -91,7 +91,7 @@
             </p>
           </div>
           <div id="development-image">
-            <img src="images/services_icons/dev_icon.png" alt="development" />
+            <img src="assets/services_icons/dev_icon.png" alt="development" />
             <p>DEVELOPMENT</p>
           </div>
         </div>
@@ -109,7 +109,7 @@
             </p>
           </div>
           <div id="product-image">
-            <img src="images/services_icons/product_icon.png" alt="products" />
+            <img src="assets/services_icons/product_icon.png" alt="products" />
             <p>PRODUCT MANAGEMENT</p>
           </div>
         </div>
@@ -119,37 +119,37 @@
       <h2>PORTFOLIO</h2>
       <div class="row" id="portfolio">
         <div class="col-md-3" id="work1">
-          <img src="images/portfolio/work4.jpg" alt="work1" />
+          <img src="assets/portfolio/work4.jpg" alt="work1" />
           <p id="overlay" class="text">Black Studio</p>
         </div>
         <div class="col-md-3" id="work2">
-          <img src="images/portfolio/work3.jpg" alt="work2" id="work2" />
+          <img src="assets/portfolio/work3.jpg" alt="work2" id="work2" />
           <p id="overlay2" class="text">Ontario Security</p>
         </div>
         <div class="col-md-3" id="work3">
-          <img src="images/portfolio/work2.jpg" alt="work3" />
+          <img src="assets/portfolio/work2.jpg" alt="work3" />
           <p id="overlay3" class="text">Pyramids</p>
         </div>
         <div class="col-md-3" id="work4">
-          <img src="images/portfolio/work1.jpg" alt="work4" />
-          <p id="overlay4" class="text">Jim Carry</p>
+          <img src="assets/portfolio/work1.jpg" alt="work4" />
+          <p id="overlay4" class="text">Movies</p>
         </div>
       </div>
       <div class="row" id="portfolio">
         <div class="col-md-3" id="work5">
-          <img src="images/portfolio/work5.jpg" alt="work1" />
-          <p id="overlay5" class="text">Have A Nice Day</p>
+          <img src="assets/portfolio/work5.jpg" alt="work1" />
+          <p id="overlay5" class="text">Have A Good Day</p>
         </div>
         <div class="col-md-3" id="work6">
-          <img src="images/portfolio/work6.jpg" alt="work2" />
+          <img src="assets/portfolio/work6.jpg" alt="work2" />
           <p id="overlay6" class="text">Calculator</p>
         </div>
         <div class="col-md-3" id="work7">
-          <img src="images/portfolio/work7.jpg" alt="work3" />
+          <img src="assets/portfolio/work7.jpg" alt="work3" />
           <p id="overlay7" class="text">Burned</p>
         </div>
         <div class="col-md-3" id="work8">
-          <img src="images/portfolio/work8.jpg" alt="work4" />
+          <img src="assets/portfolio/work8.jpg" alt="work4" />
           <p id="overlay8" class="text">Giraffe Restaurant</p>
         </div>
       </div>
@@ -198,18 +198,18 @@
       </form>
     </div>
     <footer>
-      <img src="images/social_icons/twitter.png" alt="twitter" />
-      <img src="images/social_icons/dribble.png" alt="dribble" />
-      <img src="images/social_icons/facebook.png" alt="facebook" />
-      <img src="images/social_icons/g_plus.png" alt="g_plus" />
-      <img src="images/social_icons/skype.png" alt="skype" />
-      <img src="images/social_icons/stumble_upon.png" alt="stumble_upon" />
-      <img src="images/social_icons/behance.png" alt="behance" />
-      <img src="images/social_icons/pinterest.png" alt="pinterest" />
-      <img src="images/social_icons/flickr.png" alt="flickr" />
-      <!-- <img src="images/social_icons/you_tube.png" alt=""> -->
-      <p>DELANI STUDIO</p>
-      <p>2019</p>
+      <img src="assets/social_icons/twitter.png" alt="twitter" />
+      <img src="assets/social_icons/dribble.png" alt="dribble" />
+      <img src="assets/social_icons/facebook.png" alt="facebook" />
+      <img src="assets/social_icons/g_plus.png" alt="g_plus" />
+      <img src="assets/social_icons/skype.png" alt="skype" />
+      <img src="assets/social_icons/stumble_upon.png" alt="stumble_upon" />
+      <img src="assets/social_icons/behance.png" alt="behance" />
+      <img src="assets/social_icons/pinterest.png" alt="pinterest" />
+      <img src="assets/social_icons/flickr.png" alt="flickr" />
+      <img src="assets/social_icons/you_tube.png" alt="you_tube">
+      <p>Delani Studio by Diana</p>
+      <p>2022</p>
     </footer>
     <script
       type="text/javascript"
