added more notes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <img src="assets/logo/logo.png" alt="logo" id="logo" />
       <h1>WELCOME</h1>
       <h1>TO DELANI STUDIO By DIANA</h1>
-      <p>AT DELANI STUDIO, WE ARE AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
+      <p>AT DELANI STUDIO, WE ARE AMAZING PEOPLE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
       <div class="mouse-click"></div>
       <a href="#about-us"
         ><img src="assets/mouse_click.png" alt=" mouse_click" id="mouse-click"
@@ -118,38 +118,38 @@
     <div class="portfolio">
       <h2>PORTFOLIO</h2>
       <div class="row" id="portfolio">
-        <div class="col-md-3" id="work1">
-          <img src="assets/portfolio/work4.jpg" alt="work1" />
+        <div class="col-md-3" id="work4">
+          <img src="assets/portfolio/work4.jpg" alt="work4" />
           <p id="overlay" class="text">Black Studio</p>
         </div>
-        <div class="col-md-3" id="work2">
-          <img src="assets/portfolio/work3.jpg" alt="work2" id="work2" />
+        <div class="col-md-3" id="work3">
+          <img src="assets/portfolio/work3.jpg" alt="work2" id="work3" />
           <p id="overlay2" class="text">Ontario Security</p>
         </div>
-        <div class="col-md-3" id="work3">
-          <img src="assets/portfolio/work2.jpg" alt="work3" />
+        <div class="col-md-3" id="work2">
+          <img src="assets/portfolio/work2.jpg" alt="work2" />
           <p id="overlay3" class="text">Pyramids</p>
         </div>
-        <div class="col-md-3" id="work4">
-          <img src="assets/portfolio/work1.jpg" alt="work4" />
+        <div class="col-md-3" id="work1">
+          <img src="assets/portfolio/work1.jpg" alt="work1" />
           <p id="overlay4" class="text">Movies</p>
         </div>
       </div>
       <div class="row" id="portfolio">
         <div class="col-md-3" id="work5">
-          <img src="assets/portfolio/work5.jpg" alt="work1" />
+          <img src="assets/portfolio/work5.jpg" alt="work5" />
           <p id="overlay5" class="text">Have A Good Day</p>
         </div>
         <div class="col-md-3" id="work6">
-          <img src="assets/portfolio/work6.jpg" alt="work2" />
+          <img src="assets/portfolio/work6.jpg" alt="work6" />
           <p id="overlay6" class="text">Calculator</p>
         </div>
         <div class="col-md-3" id="work7">
-          <img src="assets/portfolio/work7.jpg" alt="work3" />
+          <img src="assets/portfolio/work7.jpg" alt="work7" />
           <p id="overlay7" class="text">Burned</p>
         </div>
         <div class="col-md-3" id="work8">
-          <img src="assets/portfolio/work8.jpg" alt="work4" />
+          <img src="assets/portfolio/work8.jpg" alt="work8" />
           <p id="overlay8" class="text">Giraffe Restaurant</p>
         </div>
       </div>
@@ -158,8 +158,7 @@
       <h2>CONTACT US</h2>
 
       <form
-        id="form34A"
-        action="https://gmail.us3.list-manage.com/subscribe/post"
+        id="form_email"
         method="POST"
       >
         <input type="hidden" name="u" value="e71bed4d6ae5a7c984dfe28b0" />
@@ -171,7 +170,7 @@
             placeholder="Name...."
             name="MERGE1"
             id="MERGE1"
-            size="25"
+            size="20"
             value=""
           />
           <input
@@ -182,7 +181,7 @@
             autocorrect="off"
             name="MERGE0"
             id="MERGE0"
-            size="25"
+            size="20"
             value=""
           />
         </div>
