--- a/index.html
+++ b/index.html
@@ -1,253 +1,191 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="shortcut icon" href="../assets/Delaninew.ico" />
-    <title>Delani Studio by Diana</title>
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/delani.css" />
 
-    <script
-      async
-      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5850882928261471"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      type="text/javascript"
-      src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js"
-      data-dojo-config="usePlainJson: true, isDebug: false"
-    ></script>
-    <script type="text/javascript">
-      window.dojoRequire(["mojo/signup-forms/Loader"], function (L) {
-        L.start({
-          baseUrl: "mc.us3.list-manage.com",
-          uuid: "e71bed4d6ae5a7c984dfe28b0",
-          lid: "dbf7e27685",
-          uniqueMethods: true,
-        });
-      });
-    </script>
-  </head>
-  <body>
-    <div class="landing">
-      <img src="assets/logo/logo.png" alt="logo" id="logo" />
-      <h1>WELCOME</h1>
-      <h1>TO DELANI STUDIO By DIANA</h1>
-      <p>AT DELANI STUDIO, WE ARE AMAZING PEOPLE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
-      <div class="mouse-click"></div>
-      <a href="#about-us"
-        ><img src="assets/mouse_click.png" alt=" mouse_click" id="mouse-click"
-      /></a>
-    </div>
-    <div class="container about" id="about-us">
-      <h2 id="about">ABOUT US</h2>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="shortcut icon" href="../assets/Delaninew.ico" />
+  <title>Delani Studio by Diana</title>
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/delani.css" />
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5850882928261471"
+    crossorigin="anonymous"></script>
+
+</head>
+
+<body>
+  <div class="landing">
+    <img src="assets/logo/logo.png" alt="logo" id="logo" />
+    <h1>WELCOME</h1>
+    <h1>TO DELANI STUDIO By DIANA</h1>
+    <p>AT DELANI STUDIO, WE ARE AMAZING PEOPLE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
+    <div class="mouse-click"></div>
+    <a href="#about-us"><img src="assets/mouse_click.png" alt=" mouse_click" id="mouse-click" /></a>
+  </div>
+  <div class="container about" id="about-us">
+    <h2 id="about">ABOUT US</h2>
+    <p>
+      When you work with us, you are part of a team of commited collaborators.
+      All aspects of our software development process are intergrated ,
+      interactive and agile.
+    </p>
+    <p>
+      Our approach unifies design, development and product managent to create
+      exceptional products.
+    </p>
+    <p>
+      We start each project by understanding your business goals, the users
+      needs and the product requirements.
+    </p>
+    <p>we help translate them into active and elegant solutions.</p>
+  </div>
+  <div class="services">
+    <div id="servicesoverlay">
+      <h2>SERVICES</h2>
       <p>
-        When you work with us, you are part of a team of commited collaborators.
-        All aspects of our software development process are intergrated ,
-        interactive and agile.
+        Before we sign a contract or write a line of code, our team will spend
+        the neccessary time needed to understand your product vission.
       </p>
       <p>
-        Our approach unifies design, development and product managent to create
-        exceptional products.
+        The outcome of the scoping session a proposal or high-level statement
+        of work.
       </p>
       <p>
-        We start each project by understanding your business goals, the users
-        needs and the product requirements.
+        based on your requirements, we can provide a complete offering or just
+        the piece you need.
       </p>
-      <p>we help translate them into active and elegant solutions.</p>
     </div>
-    <div class="services">
-      <div id="servicesoverlay">
-        <h2>SERVICES</h2>
-        <p>
-          Before we sign a contract or write a line of code, our team will spend
-          the neccessary time needed to understand your product vission.
-        </p>
-        <p>
-          The outcome of the scoping session a proposal or high-level statement
-          of work.
-        </p>
-        <p>
-          based on your requirements, we can provide a complete offering or just
-          the piece you need.
-        </p>
+  </div>
+  <div class="container what-we-do">
+    <h2 class="headings">WHAT WE DO</h2>
+    <div class="row">
+      <div class="col-md-4">
+        <div id="design">
+          <h2 class="title">DESIGN</h2>
+          <p>
+            Our design practice offers a full range of services including
+            brand strategy, interaction and visual design and user experience
+            testing.
+          </p>
+          <p>
+            Throughout your project, our designers create and implement visual
+            design and workflows, solicit user feedback and work with you to
+            make sure what gets built is what is needed.
+          </p>
+        </div>
+        <div id="design-image">
+          <img src="assets/services_icons/design_icon.png" alt="design" />
+          <p>DESIGN</p>
+        </div>
       </div>
-    </div>
-    <div class="container what-we-do">
-      <h2 class="headings">WHAT WE DO</h2>
-      <div class="row">
-        <div class="col-md-4">
-          <div id="design">
-            <h2 class="title">DESIGN</h2>
-            <p>
-              Our design practice offers a full range of services including
-              brand strategy, interaction and visual design and user experience
-              testing.
-            </p>
-            <p>
-              Throughout your project, our designers create and implement visual
-              design and workflows, solicit user feedback and work with you to
-              make sure what gets built is what is needed.
-            </p>
-          </div>
-          <div id="design-image">
-            <img src="assets/services_icons/design_icon.png" alt="design" />
-            <p>DESIGN</p>
-          </div>
+      <div class="col-md-4">
+        <div id="development">
+          <h2 class="title">DEVELOPMENT</h2>
+          <p>
+            All engineers are fluent in the latest enterprise, mobile and web
+            development technologies.
+          </p>
+          <p>
+            They collaborate with your team to write, and improve code on a
+            daily basis, using proven practices such as test-driven
+            development and pair programming.
+          </p>
         </div>
-        <div class="col-md-4">
-          <div id="development">
-            <h2 class="title">DEVELOPMENT</h2>
-            <p>
-              All engineers are fluent in the latest enterprise, mobile and web
-              development technologies.
-            </p>
-            <p>
-              They collaborate with your team to write, and improve code on a
-              daily basis, using proven practices such as test-driven
-              development and pair programming.
-            </p>
-          </div>
-          <div id="development-image">
-            <img src="assets/services_icons/dev_icon.png" alt="development" />
-            <p>DEVELOPMENT</p>
-          </div>
+        <div id="development-image">
+          <img src="assets/services_icons/dev_icon.png" alt="development" />
+          <p>DEVELOPMENT</p>
         </div>
-        <div class="col-md-4">
-          <div id="product">
-            <h2 class="title">PRODUCT MANAGEMENT</h2>
-            <p>
-              All engineers are fluent in the latest enterprise, mobile and web
-              development technologies.
-            </p>
-            <p>
-              They collaborate with your team to write, and improve code on a
-              daily basis, using proven practices such as test-driven
-              development and pair programming.
-            </p>
-          </div>
-          <div id="product-image">
-            <img src="assets/services_icons/product_icon.png" alt="products" />
-            <p>PRODUCT MANAGEMENT</p>
-          </div>
+      </div>
+      <div class="col-md-4">
+        <div id="product">
+          <h2 class="title">PRODUCT MANAGEMENT</h2>
+          <p>
+            All engineers are fluent in the latest enterprise, mobile and web
+            development technologies.
+          </p>
+          <p>
+            They collaborate with your team to write, and improve code on a
+            daily basis, using proven practices such as test-driven
+            development and pair programming.
+          </p>
+        </div>
+        <div id="product-image">
+          <img src="assets/services_icons/product_icon.png" alt="products" />
+          <p>PRODUCT MANAGEMENT</p>
         </div>
       </div>
     </div>
-    <div class="portfolio">
-      <h2>PORTFOLIO</h2>
-      <div class="row" id="portfolio">
-        <div class="col-md-3" id="work4">
-          <img src="assets/portfolio/work4.jpg" alt="work4" />
-          <p id="overlay" class="text">Black Studio</p>
-        </div>
-        <div class="col-md-3" id="work3">
-          <img src="assets/portfolio/work3.jpg" alt="work2" id="work3" />
-          <p id="overlay2" class="text">Ontario Security</p>
-        </div>
-        <div class="col-md-3" id="work2">
-          <img src="assets/portfolio/work2.jpg" alt="work2" />
-          <p id="overlay3" class="text">Pyramids</p>
-        </div>
-        <div class="col-md-3" id="work1">
-          <img src="assets/portfolio/work1.jpg" alt="work1" />
-          <p id="overlay4" class="text">Movies</p>
-        </div>
+  </div>
+  
+  <!-- portfolio -->
+  <div class="portfolio">
+    <h2>PORTFOLIO</h2>
+    <div class="row" id="portfolio">
+      <div class="col-md-3" id="work4">
+        <img class="img-fluid portfolio-img" src="assets/portfolio/work4.jpg" alt="Black Studio" />
       </div>
-      <div class="row" id="portfolio">
-        <div class="col-md-3" id="work5">
-          <img src="assets/portfolio/work5.jpg" alt="work5" />
-          <p id="overlay5" class="text">Have A Good Day</p>
-        </div>
-        <div class="col-md-3" id="work6">
-          <img src="assets/portfolio/work6.jpg" alt="work6" />
-          <p id="overlay6" class="text">Calculator</p>
-        </div>
-        <div class="col-md-3" id="work7">
-          <img src="assets/portfolio/work7.jpg" alt="work7" />
-          <p id="overlay7" class="text">Burned</p>
-        </div>
-        <div class="col-md-3" id="work8">
-          <img src="assets/portfolio/work8.jpg" alt="work8" />
-          <p id="overlay8" class="text">Giraffe Restaurant</p>
-        </div>
+      <div class="col-md-3" id="work3">
+        <img class="img-fluid portfolio-img" src="assets/portfolio/work3.jpg" alt="Ontario Security" />
+      </div>
+      <div class="col-md-3" id="work2">
+        <img class="img-fluid portfolio-img" src="assets/portfolio/work2.jpg" alt="Pyramids" />
+      </div>
+      <div class="col-md-3" id="work1">
+        <img class="img-fluid portfolio-img" src="assets/portfolio/work1.jpg" alt="Movies" />
       </div>
     </div>
-    <div class="container-fluid contact">
+    <div class="row" id="portfolio">
+      <div class="col-md-3" id="work5">
+        <img class="img-fluid portfolio-img" src="assets/portfolio/work5.jpg" alt="Have A Good Day" />
+      </div>
+      <div class="col-md-3" id="work6">
+        <img class="img-fluid portfolio-img" src="assets/portfolio/work6.jpg" alt="Calculator" />
+      </div>
+      <div class="col-md-3" id="work7">
+        <img class="img-fluid portfolio-img" src="assets/portfolio/work7.jpg" alt="Burned" />
+      </div>
+      <div class="col-md-3" id="work8">
+        <img class="img-fluid portfolio-img" src="assets/portfolio/work8.jpg" alt="Giraffe Restaurant" />
+      </div>
+    </div>
+  </div>
+  <!-- contact us -->
+
+  <div class="container-fluid contact text-center">
+    <form id="contact_us" action="https://formspree.io/f/myyvvqqj" method="POST">
       <h2>CONTACT US</h2>
-
-      <form
-      id="form_email"
-      action="https://gmail.us3.list-manage.com/subscribe/post"
-      method="POST"
-    >
-      <input type="hidden" name="u" value="e71bed4d6ae5a7c984dfe28b0" />
-      <input type="hidden" name="id" value="dbf7e27685" />
-      <div class="form-group form-inline">
-        <input
-          type="text"
-          class="form-control"
-          placeholder="Name...."
-          name="MERGE1"
-          id="MERGE1"
-          size="25"
-          value=""
-        />
-        <input
-          type="email"
-          class="form-control"
-          placeholder="Email...."
-          autocapitalize="off"
-          autocorrect="off"
-          name="MERGE0"
-          id="MERGE0"
-          size="25"
-          value=""
-        />
+      <div class=" row mb-3">
+        <div class="col-5"><input type="email" class="form-control bg-light bg-opacity-50" id="Name" placeholder="Name">
+        </div>
+        <div class="col-5"><input type="email" class="form-control bg-light bg-opacity-50" id="Email"
+            placeholder="Email"></div>
       </div>
-      <div class="form-group">
-        <textarea
-          class="form-control"
-          rows="8"
-          id="comment"
-          placeholder="Your message here...."
-        ></textarea>
+      <div class="form-group mb-3">
+        <textarea class="form-control" rows="12" id="comment" placeholder="Your message here...."></textarea>
       </div>
       <button type="submit" class="btn btn-primary col-md-1">Submit</button>
     </form>
-    </div>
-    <footer>
-      <img src="assets/social_icons/twitter.png" alt="twitter" />
-      <img src="assets/social_icons/dribble.png" alt="dribble" />
-      <img src="assets/social_icons/facebook.png" alt="facebook" />
-      <img src="assets/social_icons/g_plus.png" alt="g_plus" />
-      <img src="assets/social_icons/skype.png" alt="skype" />
-      <img src="assets/social_icons/stumble_upon.png" alt="stumble_upon" />
-      <img src="assets/social_icons/behance.png" alt="behance" />
-      <img src="assets/social_icons/pinterest.png" alt="pinterest" />
-      <img src="assets/social_icons/flickr.png" alt="flickr" />
-      <img src="assets/social_icons/you_tube.png" alt="you_tube">
-      <p>Delani Studio by Diana</p>
-      <p>2022</p>
-    </footer>
-    <script
-      type="text/javascript"
-      src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js"
-      data-dojo-config="usePlainJson: true, isDebug: false"
-    ></script>
-    <script type="text/javascript">
-      window.dojoRequire(["mojo/signup-forms/Loader"], function (L) {
-        L.start({
-          baseUrl: "mc.us3.list-manage.com",
-          uuid: "e71bed4d6ae5a7c984dfe28b0",
-          lid: "dbf7e27685",
-          uniqueMethods: true,
-        });
-      });
-    </script>
-    <script src="https://code.jquery.com/jquery-3.6.1.slim.min.js" integrity="sha256-w8CvhFs7iHNVUtnSP0YKEg00p9Ih13rlL9zGqvLdePA=" crossorigin="anonymous"></script>
-    <script src="js/delani.js"></script>
-  </body>
+  </div>
+  <footer>
+    <img src="assets/social_icons/twitter.png" alt="twitter" />
+    <img src="assets/social_icons/dribble.png" alt="dribble" />
+    <img src="assets/social_icons/facebook.png" alt="facebook" />
+    <img src="assets/social_icons/g_plus.png" alt="g_plus" />
+    <img src="assets/social_icons/skype.png" alt="skype" />
+    <img src="assets/social_icons/stumble_upon.png" alt="stumble_upon" />
+    <img src="assets/social_icons/behance.png" alt="behance" />
+    <img src="assets/social_icons/pinterest.png" alt="pinterest" />
+    <img src="assets/social_icons/flickr.png" alt="flickr" />
+    <img src="assets/social_icons/you_tube.png" alt="you_tube">
+    <p>Delani Studio by Diana</p>
+    <p>2022</p>
+  </footer>
+  <script src="https://code.jquery.com/jquery-3.6.1.slim.min.js"
+    integrity="sha256-w8CvhFs7iHNVUtnSP0YKEg00p9Ih13rlL9zGqvLdePA=" crossorigin="anonymous"></script>
+  <script src="js/delani.js"></script>
+</body>
+
 </html>
