--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 </head>
 
 <body>
+  
+  <!-- Landing Page -->
   <div class="landing">
     <img src="assets/logo/logo.png" alt="logo" id="logo" />
     <h1>WELCOME</h1>
@@ -25,6 +27,8 @@
     <div class="mouse-click"></div>
     <a href="#about-us"><img src="assets/mouse_click.png" alt=" mouse_click" id="mouse-click" /></a>
   </div>
+
+  <!-- About us -->
   <div class="container about" id="about-us">
     <h2 id="about">ABOUT US</h2>
     <p>
@@ -42,6 +46,7 @@
     </p>
     <p>we help translate them into active and elegant solutions.</p>
   </div>
+  <!-- services -->
   <div class="services">
     <div id="servicesoverlay">
       <h2>SERVICES</h2>
@@ -59,6 +64,8 @@
       </p>
     </div>
   </div>
+
+  <!-- what we do -->
   <div class="container what-we-do">
     <h2 class="headings">WHAT WE DO</h2>
     <div class="row">
@@ -119,7 +126,7 @@
       </div>
     </div>
   </div>
-  
+
   <!-- portfolio -->
   <div class="portfolio">
     <h2>PORTFOLIO</h2>
