editted some files

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  
+
   <!-- Landing Page -->
   <div class="landing">
     <img src="assets/logo/logo.png" alt="logo" id="logo" />
@@ -46,13 +46,14 @@
     </p>
     <p>we help translate them into active and elegant solutions.</p>
   </div>
+
   <!-- services -->
   <div class="services">
     <div id="servicesoverlay">
       <h2>SERVICES</h2>
       <p>
         Before we sign a contract or write a line of code, our team will spend
-        the neccessary time needed to understand your product vission.
+        the neccessary time needed to understand your product vision.
       </p>
       <p>
         The outcome of the scoping session a proposal or high-level statement
@@ -159,8 +160,8 @@
       </div>
     </div>
   </div>
-  <!-- contact us -->
 
+  <!-- contact us -->
   <div class="container-fluid contact text-center">
     <form id="contact_us" action="https://formspree.io/f/myyvvqqj" method="POST">
       <h2>CONTACT US</h2>
@@ -176,6 +177,8 @@
       <button type="submit" class="btn btn-primary col-md-1">Submit</button>
     </form>
   </div>
+
+  <!-- social icons -->
   <footer>
     <img src="assets/social_icons/twitter.png" alt="twitter" />
     <img src="assets/social_icons/dribble.png" alt="dribble" />
@@ -190,8 +193,8 @@
     <p>Delani Studio by Diana</p>
     <p>2022</p>
   </footer>
-  <script src="https://code.jquery.com/jquery-3.6.1.slim.min.js"
-    integrity="sha256-w8CvhFs7iHNVUtnSP0YKEg00p9Ih13rlL9zGqvLdePA=" crossorigin="anonymous"></script>
+
+  <script src="https://code.jquery.com/jquery-3.6.1.slim.min.js" integrity="sha256-w8CvhFs7iHNVUtnSP0YKEg00p9Ih13rlL9zGqvLdePA=" crossorigin="anonymous"></script>
   <script src="js/delani.js"></script>
 </body>
 
