--- a/index.html
+++ b/index.html
@@ -166,10 +166,9 @@
     <form id="contact_us" action="https://formspree.io/f/myyvvqqj" method="POST">
       <h2>CONTACT US</h2>
       <div class=" row mb-3">
-        <div class="col-5"><input type="email" class="form-control bg-light bg-opacity-50" id="Name" placeholder="Name">
+        <div class="col-5"><input type="text" class="form-control bg-light bg-opacity-50" id="name" placeholder="Enter Your Name">
         </div>
-        <div class="col-5"><input type="email" class="form-control bg-light bg-opacity-50" id="Email"
-            placeholder="Email"></div>
+        <div class="col-5"><input type="email" class="form-control bg-light bg-opacity-50" id="email" placeholder="Enter Your Email"></div>
       </div>
       <div class="form-group mb-3">
         <textarea class="form-control" rows="12" id="comment" placeholder="Your message here...."></textarea>
