created contact page

--- a/index.html
+++ b/index.html
@@ -166,14 +166,14 @@
     <form id="contact_us" action="https://formspree.io/f/myyvvqqj" method="POST">
       <h2>CONTACT US</h2>
       <div class=" row mb-3">
-        <div class="col-6"><input type="text" class="form-control bg-opacity-50" id="your-name" placeholder="Enter Your Name" required>
+        <div class="col-6"><input type="text" name="yourname" class="form-control bg-opacity-50" id="your-name" placeholder="Enter Your Name" required>
         </div>
-        <div class="col-6"><input type="email" class="form-control bg-opacity-50" id="email" placeholder="Enter Email" required></div>
+        <div class="col-6"><input type="email" name="youremail" class="form-control bg-opacity-50" id="email" placeholder="Enter Email" required></div>
       </div>
       <div class="form-group mb-3">
-        <textarea class="form-control col-12" rows="12" id="comment" placeholder="Your message here...."></textarea>
+        <textarea class="form-control col-12" name="yourcomment" rows="12" id="comment" placeholder="Your message here...."></textarea>
       </div>
-      <button type="submit" class="btn btn-primary col-md-1">Submit</button>
+      <button type="submit" class="btn btn-light col-md-1 ">Submit</button>
     </form>
   </div>
 
