--- a/index.html
+++ b/index.html
@@ -166,12 +166,15 @@
     <form id="contact_us" action="https://formspree.io/f/myyvvqqj" method="POST">
       <h2>CONTACT US</h2>
       <div class=" row mb-3">
-        <div class="col-6"><input type="text" name="yourname" class="form-control bg-opacity-50" id="your-name" placeholder="Enter Your Name" required>
+        <div class="col-6"><input type="text" name="yourname" class="form-control bg-opacity-50" id="your-name"
+            placeholder="Enter Your Name" required>
         </div>
-        <div class="col-6"><input type="email" name="youremail" class="form-control bg-opacity-50" id="email" placeholder="Enter Email" required></div>
+        <div class="col-6"><input type="email" name="youremail" class="form-control bg-opacity-50" id="email"
+            placeholder="Enter Email" required></div>
       </div>
       <div class="form-group mb-3">
-        <textarea class="form-control col-12" name="yourcomment" rows="12" id="comment" placeholder="Your message here...."></textarea>
+        <textarea class="form-control col-12" name="yourcomment" rows="12" id="comment"
+          placeholder="Your message here...."></textarea>
       </div>
       <button type="submit" class="btn btn-light col-md-1 ">Submit</button>
     </form>
@@ -193,7 +196,8 @@
     <p>2022</p>
   </footer>
 
-  <script src="https://code.jquery.com/jquery-3.6.1.slim.min.js" integrity="sha256-w8CvhFs7iHNVUtnSP0YKEg00p9Ih13rlL9zGqvLdePA=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.6.1.slim.min.js"
+    integrity="sha256-w8CvhFs7iHNVUtnSP0YKEg00p9Ih13rlL9zGqvLdePA=" crossorigin="anonymous"></script>
   <script src="js/delani.js"></script>
 </body>
 
