formatted html file

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <!-- what we do -->
   <div class="container what-we-do">
     <h2 class="headings">WHAT WE DO</h2>
-    <p>Click on the images below for more information..</p>
+    <p>Click on the images below for more information...</p>
     <div class="row">
       <div class="col-md-4">
         <div id="design">
