--- a/index.html
+++ b/index.html
@@ -67,67 +67,50 @@
   </div>
 
   <!-- what we do -->
-  <div class="container what-we-do">
-    <h2 class="headings">WHAT WE DO</h2>
-    <p>Click on the images below for more information...Click again to hide information.</p>
-    <div class="row">
+  <div class="container-fluid what-we-do" id="whatwedo">
+    <h2 class="mb-4">WHAT WE DO</h2>
+    <span>Click on the images below for more information...Click again to hide information.</span>
+    <div class="row whatWeDo">
       <div class="col-md-4">
-        <div id="design">
-          <h2 class="title">DESIGN</h2>
-          <p>
+        <div class="card-body text-center description">
+          <h3 class="title">DESIGN</h3>
+          <p> 
             Our design practice offers a full range of services including
             brand strategy, interaction and visual design and user experience
-            testing.
-          </p>
-          <p>
-            Throughout your project, our designers create and implement visual
+            testing. Throughout your project, our designers create and implement visual
             design and workflows, solicit user feedback and work with you to
             make sure what gets built is what is needed.
           </p>
         </div>
-        <div id="design-image">
-          <img src="assets/services_icons/design_icon.png" alt="design" />
-          <p>DESIGN</p>
-        </div>
+        <img class="whatwedoimages mx-auto img-fluid" src="assets/services_icons/design_icon.png" alt="design" title="DESIGN"/>
       </div>
       <div class="col-md-4">
-        <div id="development">
-          <h2 class="title">DEVELOPMENT</h2>
+        <div class="card-body text-center description">
+          <h3 class="title">DEVELOPMENT</h3>
+          <p>
+              All engineers are fluent in the latest enterprise, mobile and web
+              development technologies. They collaborate with your team to write, and improve code on a
+              daily basis, using proven practices such as test-driven
+              development and pair programming.
+            </p>  
+        </div>
+        <img class="whatwedoimages mx-auto img-fluid" src="assets/services_icons/dev_icon.png" alt="development" title="DEVELOPMENT" />
+      </div>
+      <div class="col-md-4">
+        <div class="card-body text-center description">
+          <h3 class="title">PRODUCT MANAGEMENT</h3>
           <p>
             All engineers are fluent in the latest enterprise, mobile and web
-            development technologies.
-          </p>
-          <p>
-            They collaborate with your team to write, and improve code on a
+            development technologies. They collaborate with your team to write, and improve code on a
             daily basis, using proven practices such as test-driven
             development and pair programming.
           </p>
         </div>
-        <div id="development-image">
-          <img src="assets/services_icons/dev_icon.png" alt="development" />
-          <p>DEVELOPMENT</p>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div id="product">
-          <h2 class="title">PRODUCT MANAGEMENT</h2>
-          <p>
-            All engineers are fluent in the latest enterprise, mobile and web
-            development technologies.
-          </p>
-          <p>
-            They collaborate with your team to write, and improve code on a
-            daily basis, using proven practices such as test-driven
-            development and pair programming.
-          </p>
-        </div>
-        <div id="product-image">
-          <img src="assets/services_icons/product_icon.png" alt="products" />
-          <p>PRODUCT MANAGEMENT</p>
-        </div>
+        <img class="whatwedoimages mx-auto img-fluid" src="assets/services_icons/product_icon.png" alt="products" title="PRODUCT MANAGEMENT"/>
       </div>
     </div>
   </div>
+
 
   <!-- portfolio -->
   <div class="portfolio">
